--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="მეტი ვიდრე პიცა" />
+    <meta name="keywords" content="პიცა,სპეც.შეთავაზებები,თბილისის #1" />
+    <meta name="author" content="Nino Talakvadze" />
     <title>Contact</title>
     <link rel="icon" href="images/icone-pizza.png" />
     <link rel="stylesheet" href="styles/reset.css" />
