--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="მეტი ვიდრე პიცა" />
+    <meta name="keywords" content="პიცა,სპეც.შეთავაზებები,თბილისის #1" />
+    <meta name="author" content="Nino Talakvadze" />
+    <meta
+      property="og:url"
+      content="https://ninotal90.github.io/Final-Project/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="შეიგრძენი განსაკუთრებული არომატი და იმოგზაურე დაუვიწყარ გემოებში" />
+    <meta
+      property="og:description"
+      content="პიცა,შეთავაზებები,თბილისი ქ #1"
+    />
+    <meta
+      property="og:image"
+      content="pizza-image"
+    />
     <title>Document</title>
     <link rel="icon" href="images/icone-pizza.png" />
     <link rel="stylesheet" href="styles/reset.css" />
@@ -18,51 +35,51 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-</head>
-<body class="main-conteiner">
-  <header>
-    <div class="header-wraper">
-      <a class="logo-size" href="#">PiZza</a>
-      <nav class="navigation" id="navBar">
-        <ul class="ul-nav">
-          <li><a href="index.html">მთავარი</a></li>
-          <li><a href="menu.html">მენიუ</a></li>
-          <li><a href="offers.html">სპეც.შეთავაზება</a></li>
-          <li><a href="contact.html">კონტაქტი</a></li>
-        </ul>
-      </nav>
-      <div class="burger" id="burgerBar">
-        <i class="fa-solid fa-bars"></i>
+  </head>
+  <body class="main-conteiner">
+    <header>
+      <div class="header-wraper">
+        <a class="logo-size" href="#">PiZza</a>
+        <nav class="navigation" id="navBar">
+          <ul class="ul-nav">
+            <li><a href="index.html">მთავარი</a></li>
+            <li><a href="menu.html">მენიუ</a></li>
+            <li><a href="offers.html">სპეც.შეთავაზება</a></li>
+            <li><a href="contact.html">კონტაქტი</a></li>
+          </ul>
+        </nav>
+        <div class="burger" id="burgerBar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+        <button class="buttonl" id="buttonClick">შესვლა</button>
       </div>
-      <button class="buttonl" id="buttonClick">შესვლა</button>
-    </div>
-  </header>
-  <section>
-    <div class="first-section-wraper">
-      <div class="title-text">
-        <h2>შეიგრძენი განსაკუთრებული</h2>
-        <h3><span>არომატი</span> და იმოგზაურე</h3>
-        <h4>დაუვიწყარ გემოებში</h4>
+    </header>
+    <section>
+      <div class="first-section-wraper">
+        <div class="title-text">
+          <h2>შეიგრძენი განსაკუთრებული</h2>
+          <h3><span>არომატი</span> და იმოგზაურე</h3>
+          <h4>დაუვიწყარ გემოებში</h4>
+        </div>
+        <div class="pizza-image">
+          <img src="images/pizza-bg.png" alt="pizza" />
+        </div>
       </div>
-      <div class="pizza-image">
-        <img src="images/pizza-bg.png" alt="pizza" />
+    </section>
+    <footer>
+      <div class="main-footer">
+        <div class="icons-div">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+        <div class="copy">
+          <h2>© Start, 2023. All rights reserved.</h2>
+        </div>
       </div>
-    </div>
-  </section>
-  <footer>
-    <div class="main-footer">
-      <div class="icons-div">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-pinterest"></i>
-      </div>
-      <div class="copy">
-        <h2>© Start, 2023. All rights reserved.</h2>
-      </div>
-    </div>
-  </footer>
-  <script src="script.js"></script>
-</body>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
