--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="pizza-image"
+      content="https://ninotal90.github.io/Final-Project/images/bolognese.png"
     />
     <title>Document</title>
     <link rel="icon" href="images/icone-pizza.png" />
