--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="https://ninotal90.github.io/Final-Project/"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="შეიგრძენი განსაკუთრებული არომატი და იმოგზაურე დაუვიწყარ გემოებში" />
+    <meta property="og:title" content="ადგილი,სადაც გელოდებიან" />
     <meta
       property="og:description"
       content="პიცა,შეთავაზებები,თბილისი ქ #1"
