--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://ninotal90.github.io/Final-Project/images/prosciutto.png"
+      content="https://github.com/ninotal90/Final-Project/blob/main/images/866679.jpg?raw=true"
     />
     <title>Document</title>
     <link rel="icon" href="images/icone-pizza.png" />
