--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="ადგილი,სადაც გელოდებიან" />
-    <meta
-      property="og:description"
-      content="პიცა,შეთავაზებები,თბილისი ქ #1"
-    />
+    <meta property="og:description" content="პიცა,შეთავაზებები,თბილისი ქ #1" />
     <meta
       property="og:image"
       content="https://github.com/ninotal90/Final-Project/blob/main/images/866679.jpg?raw=true"
