--- a/offers.html
+++ b/offers.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="მეტი ვიდრე პიცა" />
     <meta name="keywords" content="პიცა,სპეც.შეთავაზებები,თბილისის #1" />
     <meta name="author" content="Nino Talakvadze" />
+    <meta
+      property="og:url"
+      content="https://ninotal90.github.io/Final-Project/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ადგილი,სადაც გელოდებიან" />
+    <meta property="og:description" content="პიცა,შეთავაზებები,თბილისი ქ #1" />
+    <meta
+      property="og:image"
+      content="https://github.com/ninotal90/Final-Project/blob/main/images/866679.jpg?raw=true"
+    />
     <title>Special Offers</title>
     <link rel="icon" href="images/icone-pizza.png" />
     <link rel="stylesheet" href="styles/reset.css" />
@@ -21,61 +32,61 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-</head>
-<body class="main-conteiner1">
-  <header>
-    <div class="header-wraper">
-      <a class="logo-size" href="#">PiZza</a>
-      <nav class="navigation" id="navBar">
-        <ul class="ul-nav">
-          <li><a href="index.html">მთავარი</a></li>
-          <li><a href="menu.html">მენიუ</a></li>
-          <li><a href="offers.html">სპეც.შეთავაზება</a></li>
-          <li><a href="contact.html">კონტაქტი</a></li>
-        </ul>
-      </nav>
-      <div class="burger" id="burgerBar">
-        <i class="fa-solid fa-bars"></i>
+  </head>
+  <body class="main-conteiner1">
+    <header>
+      <div class="header-wraper">
+        <a class="logo-size" href="#">PiZza</a>
+        <nav class="navigation" id="navBar">
+          <ul class="ul-nav">
+            <li><a href="index.html">მთავარი</a></li>
+            <li><a href="menu.html">მენიუ</a></li>
+            <li><a href="offers.html">სპეც.შეთავაზება</a></li>
+            <li><a href="contact.html">კონტაქტი</a></li>
+          </ul>
+        </nav>
+        <div class="burger" id="burgerBar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+        <button class="buttonl" id="buttonClick">შესვლა</button>
       </div>
-      <button class="buttonl" id="buttonClick">შესვლა</button>
-    </div>
-  </header>
-  <section>
-    <div class="main-offers-div">
-      <div class="offers-box">
-        <p>
-          ყოველ სამშაბათს და ოთხშაბათს 10:00-დან 14:00-მდე ისარგებლე
-          <span>30% </span> ფასდაკლებით ნებისმიერი სახეობის პიცაზე.
-        </p>
+    </header>
+    <section>
+      <div class="main-offers-div">
+        <div class="offers-box">
+          <p>
+            ყოველ სამშაბათს და ოთხშაბათს 10:00-დან 14:00-მდე ისარგებლე
+            <span>30% </span> ფასდაკლებით ნებისმიერი სახეობის პიცაზე.
+          </p>
+        </div>
+        <div class="offers-box">
+          <p>
+            კვირის ნებისმიერ დღეს სტუდენტებისთვის მოქმედებს
+            <span>50%</span> ფასდაკლება.
+          </p>
+        </div>
+        <div class="offers-box">
+          <p>
+            2 პიცის შეძენისას მიიღე
+            <span>საჩუქრად</span> გამაგრილებელი სასმელი.
+          </p>
+        </div>
       </div>
-      <div class="offers-box">
-        <p>
-          კვირის ნებისმიერ დღეს სტუდენტებისთვის მოქმედებს
-          <span>50%</span> ფასდაკლება.
-        </p>
+    </section>
+    <footer>
+      <div class="main-footer">
+        <div class="icons-div">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+        <div class="copy">
+          <h2>© Start, 2023. All rights reserved.</h2>
+        </div>
       </div>
-      <div class="offers-box">
-        <p>
-          2 პიცის შეძენისას მიიღე
-          <span>საჩუქრად</span> გამაგრილებელი სასმელი.
-        </p>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <div class="main-footer">
-      <div class="icons-div">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-pinterest"></i>
-      </div>
-      <div class="copy">
-        <h2>© Start, 2023. All rights reserved.</h2>
-      </div>
-    </div>
-  </footer>
-  <script src="script.js"></script>
-</body>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
