--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       property="og:image"
       content="https://github.com/ninotal90/Final-Project/blob/main/images/866679.jpg?raw=true"
     />
-    <title>Contact</title>
+    <title>კონტაქტი</title>
     <link rel="icon" href="images/icone-pizza.png" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/font.css" />
