added facebook like

--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
     />
   </head>
   <body class="main-conteiner">
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/ka_GE/sdk.js#xfbml=1&version=v16.0"
+      nonce="AJXXRtRa"
+    ></script>
+    <!-- Your like button code -->
+    <div
+      class="fb-like"
+      data-href="https://developers.facebook.com/docs/plugins/"
+      data-width=""
+      data-layout=""
+      data-action=""
+      data-size=""
+      data-share="true"
+    ></div>
     <header>
       <div class="header-wraper">
         <a class="logo-size" href="#">PiZza</a>
